--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section>
 
-    <h1 id="h1">See your Charecter!!</h1>
+    <h1 id="h1">See your Character!!</h1>
 
     <div class="maindiv">
         <h5 id="h5"  >Enter Your name</h5><br>
@@ -40,7 +40,7 @@
         });
        </script>
 
-       <footer style="text-align: center;">Develope By Cocktailwings</footer>
+       <footer style="text-align: center;">Developed By Cocktailwings</footer>
     
 
 </section>
